--- a/Windows Uomi App/Windows Uomi App.csproj
+++ b/Windows Uomi App/Windows Uomi App.csproj
@@ -76,11 +76,23 @@
     <Compile Include="Data\RetailCustomer.cs" />
     <Compile Include="Data\Transaction.cs" />
     <Compile Include="Data\WholesaleCustomer.cs" />
+    <Compile Include="frmCustomerData.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCustomerData.Designer.cs">
+      <DependentUpon>frmCustomerData.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmTransaction.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTransaction.Designer.cs">
+      <DependentUpon>frmTransaction.cs</DependentUpon>
     </Compile>
     <Compile Include="Languages\Translations.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -90,8 +102,14 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Translator.cs" />
+    <EmbeddedResource Include="frmCustomerData.resx">
+      <DependentUpon>frmCustomerData.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTransaction.resx">
+      <DependentUpon>frmTransaction.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Languages\Translations.el-GR.resx" />
     <EmbeddedResource Include="Languages\Translations.resx">
@@ -135,9 +153,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Database\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Media\uomi.ico" />
   </ItemGroup>
