--- a/Windows Uomi App/Windows Uomi App.csproj
+++ b/Windows Uomi App/Windows Uomi App.csproj
@@ -81,6 +81,12 @@
     <Compile Include="Data\Transaction.cs" />
     <Compile Include="Data\WholesaleCustomer.cs" />
     <Compile Include="DBUtil.cs" />
+    <Compile Include="frmAbout.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAbout.Designer.cs">
+      <DependentUpon>frmAbout.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmCustomerData.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -125,6 +131,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Translator.cs" />
+    <EmbeddedResource Include="frmAbout.resx">
+      <DependentUpon>frmAbout.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmCustomerData.resx">
       <DependentUpon>frmCustomerData.cs</DependentUpon>
     </EmbeddedResource>
