--- a/Windows Uomi App/Windows Uomi App.csproj
+++ b/Windows Uomi App/Windows Uomi App.csproj
@@ -168,6 +168,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="mainDiagram.cd" />
     <None Include="packages.config" />
     <None Include="Properties\DataSources\Windows_Uomi_App.Data.Customer.datasource" />
     <None Include="Properties\DataSources\Windows_Uomi_App.Data.Transaction.datasource" />
